[tool.poetry]
name = "animator"
version = "0.1.0"
description = "make animated gifs from inkscape .svg"
authors = ["Juliano Santos Finck <juliano.finck@codex.com.br>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
